# eg-graph-maker

./: .gitignore  Cargo.toml  README.md
eg-graph-editor-lib/: Cargo.toml
eg-graph-editor-lib/src/: atom.rs  graph.rs  lib.rs  proof.rs
eg-graph-editor-lib/src/graph/: error.rs  subgraph.rs
eg-graph-editor-lib/src/proof/: action.rs  error.rs  inference_rule.rs
eg-graph-editor-lib/src/proof/action/: error.rs
eg-graph-editor-lib/src/proof/inference_rule/: double_cut_draw.rs  double_cut_erase.rs  erasure.rs  insertion.rs  iteration.rs
eg-graph-editor-lib/src/test/: mod.rs
eg-graph-editor-tui/: Cargo.toml
eg-graph-editor-tui/src/: args.rs  main.rs  print.rs
eg-graph-editor-tui/src/args/: edit.rs  mode.rs  rule.rs
eg-graph-editor-ui/: Cargo.toml  Trunk.toml  index.html  main.css  package.json
eg-graph-editor-ui/bindings/: Action.ts  Event.ts  Request.ts
eg-graph-editor-ui/node-editor/: bun.lockb  package.json  tsconfig.json  vite.config.ts
eg-graph-editor-ui/node-editor/src/: App.svelte  eventstore.ts  main.ts
eg-graph-editor-ui/src/: app.rs  main.rs
eg-graph-editor-ui/src/app/: editor.rs  header.rs  home.rs  pagenotfound.rs
eg-graph-editor-ui/src/app/editor/: event.rs
