[workspace]
resolver = "2"
members = ["eg-graph-editor-lib", "eg-graph-editor-ui"]

[workspace.dependencies]
async-std = "1.12.0"
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
leptos = "0.6.9"
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-panic = "0.1.2"
tracing-subscriber = "0.3.18"
tracing-subscriber-wasm = "0.1.0"
