[workspace]
resolver = "2"
members = ["eg-graph-editor-lib", "eg-graph-editor-tui", "eg-graph-editor-ui"]

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
async-std = "1.12.0"
color-eyre = "0.6.3"
clap = "4.5.4"
console_error_panic_hook = "0.1.7"
fallible-iterator = "0.3.0"
futures = "0.3.30"
hashlink = "0.9.0"
itertools = "0.12.1"
leptos = "0.6.11"
leptos_meta = "0.6.11"
leptos_router = "0.6.11"
leptos-use = "0.10.8"
nid = "3.0.0"
thiserror = "1.0.59"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-panic = "0.1.2"
tracing-subscriber = "0.3.18"
tracing-subscriber-wasm = "0.1.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
serde = "1.0.198"
