[package]
name = "eg-graph-editor-lib"
version = "0.1.0"
edition = "2021"


[features]
short = []


[dependencies]
fallible-iterator.workspace = true
hashlink.workspace = true
itertools.workspace = true
nid.workspace = true
thiserror.workspace = true
tracing.workspace = true


[dev-dependencies]
tracing-error.workspace = true
tracing-panic.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
