[package]
name = "eg-graph-editor-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
eg-graph-editor-lib = { path = "../eg-graph-editor-lib", features = ["short"] }

async-std = { workspace = true, features = ["attributes"] }
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
itertools.workspace = true
fallible-iterator.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-panic.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
